# KapiBara-ROS-2-General-Image

./: .gitignore  .gitmodules  LICENSE  README.md  compose.yml  compose_sim.yml  dev.sh  prod.sh
Docker/: Dockerfile.dev  Dockerfile.prod
commands/: README.md  build_package.sh  build_packages.sh  create_package.sh  create_workspace.sh  run_cmd.sh  run_teleop.sh  upgrade.sh
debs/: libedgetpu-dev.deb  libedgetpu1-std.deb
dependencies/: gazebo.txt  packages.txt
entrypoints/: entrypoint.dev.sh  entrypoint.prod.sh
env/: dev  prod
utils/: README.md  py-extension  uv-runner
workspace/: MUJOCO_LOG.TXT  kapibara1.urdf.xacro
workspace/cfg/: gazebo_bridge.yaml
workspace/launch/: launch.py  launch.sample.py  launch.sim.py
workspace/log/: latest_build
workspace/src/emotion_estimer/: CMakeLists.txt  dependencies.txt  package.xml
workspace/src/emotion_estimer/emotion_estimer/: TFLiteFaceDetector.py  face_data.py  kapibara_audio.py  midas.py  yunet.py
workspace/src/emotion_estimer/scripts/: estimator.py
workspace/src/kapibara/: CMakeLists.txt  dependencies.txt
workspace/src/kapibara/config/: my_controllers.yaml
workspace/src/kapibara/description/: camera.xacro  imu.xacro  lasers_def.xacro  robot_core.xacro  ros2_control.xacro
workspace/src/kapibara/launch/: launch.sim.py
workspace/src/kapibara_interfaces/: CMakeLists.txt
workspace/src/kapibara_interfaces/msg/: CanACK.msg  CanPing.msg  EncodersAndSpeed.msg  FaceEmbed.msg  PiezoSense.msg  PointValue2D.msg
workspace/src/kapibara_interfaces/srv/: StopMind.srv
workspace/src/kapibara_twingo_bridge/: CMakeLists.txt  package.xml
workspace/src/kapibara_twingo_bridge/include/kapibara_twingo_bridge/: can.hpp  common.hpp  datatypes.h  event_buffered.hpp
workspace/src/kapibara_twingo_bridge/src/: bridge.cpp  can.cpp  frame.cpp
workspace/src/kapibara_vel_saltis_bridge/: CMakeLists.txt  package.xml
workspace/src/kapibara_vel_saltis_bridge/include/kapibara_vel_saltis_bridge/: can.hpp  common.hpp  datatypes.h  event.hpp  frame.hpp
workspace/src/kapibara_vel_saltis_bridge/src/: bridge.cpp  can.cpp  frame.cpp
workspace/src/kinect_ros2/: package.xml
workspace/src/kinect_ros2/cfg/: calibration_depth.yaml  calibration_rgb.yaml
workspace/src/kinect_ros2/src/: kinect_ros2_component.cpp
workspace/src/microphone/: CMakeLists.txt  package.xml
workspace/src/microphone/scripts/: mic.py
workspace/src/modus_board/: CMakeLists.txt  package.xml
workspace/src/modus_board/scripts/: enable_boards.py  reset_boards.py
workspace/src/modus_board_interfaces/: CMakeLists.txt  package.xml
workspace/src/mqtt_bridge/: CMakeLists.txt  package.xml
workspace/src/mqtt_bridge/src/: mqtt.cpp
workspace/src/start_sequence/: CMakeLists.txt  package.xml
workspace/src/start_sequence/scripts/: start.py
workspace/src/vel_saltis_drive/: CMakeLists.txt  package.xml  vel_saltis_drive.xml
workspace/src/vel_saltis_drive/include/vel_saltis_drive/: Config.hpp  frame.hpp  servo.hpp  vel_saltis_drive.hpp  wheel.hpp
workspace/src/vel_saltis_drive/src/: can.cpp  frame.cpp  vel_saltis_drive.cpp
workspace/src/vel_saltis_ears/: CMakeLists.txt  package.xml  vel_saltis_ears.xml
workspace/src/vel_saltis_ears/include/vel_saltis_ears/: Config.hpp  can.hpp  can_msg.hpp  common.hpp  servo.hpp  vel_saltis_ears.hpp
workspace/src/vel_saltis_ears/src/: can.cpp  frame.cpp  vel_saltis_ears.cpp
workspace/src/vel_saltis_services/: CMakeLists.txt  package.xml
workspace/src/vel_saltis_services/msg/: FusionCFG.msg  ImuCFG.msg  MotorCFG.msg  PIDCFG.msg  ServoCFG.msg
workspace/src/vel_saltis_services/srv/: GetFusionCFG.srv  GetImuCFG.srv  GetMotorCFG.srv  GetPIDCFG.srv  GetServoCFG.srv  SetFusionCFG.srv  SetImuCFG.srv  SetMotorCFG.srv  SetPIDCFG.srv  SetServoCFG.srv
